@@ -1,20 +1,21 @@
 package gherkin.formatter.model;
 
 import gherkin.formatter.Argument;
+import gherkin.formatter.Mappable;
 
 import java.util.List;
 
-public class Result {
+public class Result extends Mappable {
     private final String status;
-    private final String errorMessage;
+    private final String error_message;
     private final List<Argument> arguments;
-    private final String stepdefLocation;
+    private final String stepdef_location;
 
     public Result(String status, String errorMessage, List<Argument> arguments, String stepdefLocation) {
         this.status = status;
-        this.errorMessage = errorMessage;
+        this.error_message = errorMessage;
         this.arguments = arguments;
-        this.stepdefLocation = stepdefLocation;
+        this.stepdef_location = stepdefLocation;
     }
 
     public String getStatus() {
@@ -22,7 +23,7 @@ public class Result {
     }
 
     public String getErrorMessage() {
-        return errorMessage;
+        return error_message;
     }
 
     public List<Argument> getArguments() {
@@ -30,6 +31,6 @@ public class Result {
     }
 
     public String getStepdefLocation() {
-        return stepdefLocation;
+        return stepdef_location;
     }
 }
