@@ -2,7 +2,8 @@
 
 === New Features
 * New aliases for Scenario Outline in Swedish, Norwegian and English. (Peter Krantz, Aslak Hellesøy)
-* Improved build documentation for people who want to contribute (Aslak Hellesøy)
+* Improved build documentation for people who want to contribute. (Aslak Hellesøy)
+* Results can now be outputted/parsed in JSON. (Aslak Hellesøy)
 
 == 2.2.9 (2010-10-15)
 
